<resources>
    <string name="app_name">iSecurity</string>
    <string name="open_camera">Open Camera</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_feed">Feed</string>
    <string name="title_settings">Settings</string>
    <string name="title_next_steps">Next Steps</string>
    <string name="login">login</string>
    <string name="loginFromSignUp">Already registered? LOGIN</string>
    <string name="signUpFromLogin">New user? SIGN UP</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="email">Email</string>
    <string name="forget_me">Forget me</string>
    <string name="location">Enter your location</string>
    <string name="title_activity_maps">Map</string>
    <string name="preference_file_key">app_state</string>
    <string name="camera_s_qr_code">Enter your camera code</string>
    <string name="saved_high_score_key">logged_in</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="log_out">Log out</string>
    <string name="msg_subscribed">Subscribtion Success</string>
    <string name="msg_subscribe_failed">Subscription Failed</string>
    <string name="registered_camera">Registered camera</string>
    <string name="msg_unsubscribed">Unsubscribe Success</string>
    <string name="msg_unsubscribe_failed">Unsubscribe Failed</string>
    <string name="connectToWifi">Connect camera to Wifi</string>
    <string name="connect_to_wifi">Please connect to iSecurity Wifi and then press OK!</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="camera_config">Camera Wifi Configuration</string>
    <string name="save">Save</string>
    <string name="gallery">Gallery</string>

</resources>
