<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_alerts">

    <fragment
        android:id="@+id/navigation_alerts"
        android:name="ca.ualberta.dorsa.seccam.ui.alerts.AlertsFragment"
        android:label="@string/title_alerts"
        tools:layout="@layout/fragment_alerts" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ca.ualberta.dorsa.seccam.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_next_steps"
        android:name="ca.ualberta.dorsa.seccam.ui.nextsteps.NextStepsFragment"
        android:label="@string/title_next_steps"
        tools:layout="@layout/fragment_next_steps" />

    <fragment
        android:id="@+id/gallery"
        android:name="ca.ualberta.dorsa.seccam.ui.gallery.GalleryFragment"
        android:label="@string/gallery"
        tools:layout="@layout/fragment_gallery" />
</navigation>