<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:weightSum="10"
android:orientation="vertical"
android:layout_height="match_parent"
tools:context="ca.ualberta.dorsa.seccam.LogActivity">

<androidx.appcompat.widget.AppCompatImageView
    android:layout_weight="3"
    android:layout_marginTop="30dp"
    android:layout_height="0dp"
    app:srcCompat="@mipmap/ic_launcher"
    android:layout_width="match_parent"
    android:inputType="textPassword" />

    <Button
        android:onClick="chooseLocation"
        android:text="@string/location"
        android:layout_weight="1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="0dp"
        android:layout_width="match_parent" />

    <Button
        android:onClick="openCamera"
        android:text="@string/open_camera"
        android:layout_weight="1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="0dp"
        android:layout_width="match_parent" />


    <Button
        android:onClick="forgetMe"
        android:text="@string/forget_me"
        android:layout_weight="1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="0dp"
        android:layout_width="match_parent" />

    <Button
        android:onClick="logOut"
        android:text="Log out"
        android:layout_weight="1"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_height="0dp"
        android:layout_width="match_parent" />



</androidx.appcompat.widget.LinearLayoutCompat>
